# OpenGL-4-Shading-Language-Cookbook-Third-Edition

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
chapter00/: CMakeLists.txt  main.cpp
chapter01/: CMakeLists.txt  main.cpp  scenebasic.cpp  scenebasic.h
chapter01/shader/: basic.frag.glsl  basic.vert.glsl
chapter02/: CMakeLists.txt  main.cpp
chapter03/: CMakeLists.txt  main.cpp  scenephong.cpp  scenephong.h
chapter03/shader/: phong.frag.glsl  phong.vert.glsl
chapter04/: CMakeLists.txt  main.cpp  scenedirectional.h  scenefog.h  scenemultilight.h  scenepbr.h  sceneperfragment.h  scenespot.h  scenetoon.cpp  scenetoon.h
cmake/: CommonMacros.cmake
ingredients/: CMakeLists.txt  aabb.h  cube.cpp  cube.h  glslprogram.cpp  glslprogram.h  glutils.cpp  glutils.h  scene.h  scenerunner.h  trianglemesh.h
src/: CMakeLists.txt
src/ch00/: CMakeLists.txt  app.cpp  app.h  main_app.cpp  main_glad.cpp  main_glew.cpp
src/ch01/: CMakeLists.txt  main.cpp  scenebasic.cpp  scenebasic.h  scenemenu.cpp  scenemenu.h
src/ch01/shader/: basic.frag.glsl  basic.vert.glsl
src/common/: CMakeLists.txt  cube.cpp  cube.h  glslprogram.cpp  glslprogram.h  glutils.cpp  glutils.h  random.h  scene.h  scenerunner.h  texture.cpp  trianglemesh.cpp
